# freeds-lab-databrickish

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  reenv.sh  requirements.txt  run_book.py  setup.sh
notebooks/: extract_wikipedia_pageviews.ipynb  helloworld.ipynb
notebooks/snippets/: snippets.ipynb
notebooks/wikipedia_pageviews/: wikipedia_pageviews_bronze.ipynb  wikipedia_pageviews_extract.ipynb  wikipedia_pageviews_silver.ipynb
tests/: test_dummy.py
