[tool.poetry]
name = "pipe-dreams"
version = "0.1.0"
description = "A project for developing Jupyter notebooks"
authors = ["Your Name <youremail@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"

black = {extras = ["jupyter"], version = "^25.1.0"}
[poetry.group.dev.dependencies]
black = "^21.0"
flake8 = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"